CI/CD: add `copy-to-ci` and `copy-to-release` jobs
See dmx-platform/dmx-platform#327

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,40 @@
+# 1) Build every commit on every branch and add the COMMIT SHORT SHA as suffix
 maven-build:
+  stage: build
   script:
     - mvn clean package
   artifacts:
     paths:
       - target/*.jar
+    name: ${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}
+
+# 2) Copies SNAPSHOT builds on 'master' branch into download.dmx.systems/ci/ directory
+copy-to-ci:
+  stage: deploy
+  script:
+    - CIDIR='/var/www/download.dmx.systems/ci'
+    - DESTDIR="${CIDIR}/${CI_PROJECT_NAME}"
+    - JARFILE="$( basename $( ls target/*.jar | tail -n1) )"
+    - NUNC="$( date +%F )"
+    - DESTJARFILE="$( basename ${JARFILE} .jar )_${NUNC}_${CI_PIPELINE_ID}.jar"
+    - if [ ! -d  ${DESTDIR} ]; then mkdir ${DESTDIR}; fi
+    - cp target/${JARFILE} ${DESTDIR}/${DESTJARFILE}
+    - ln -sf  ${DESTDIR}/${DESTJARFILE} ${DESTDIR}/${CI_PROJECT_NAME}-latest.jar
+  dependencies:
+    - maven-build
+  only:
+    - master
+
+# 3) Copies tagged RELEASE builds into download.dmx.systems/plugins/ directory
+copy-to-release:
+  stage: deploy
+  script:
+    - RELEASEDIR='/var/www/download.dmx.systems/plugins'
+    - DESTDIR="${RELEASEDIR}/${CI_PROJECT_NAME}"
+    - JARFILE="$( basename $( ls target/*.jar | tail -n1) )"
+    - if [ ! -d  ${DESTDIR} ]; then mkdir ${DESTDIR}; fi
+    - cp target/${JARFILE} ${DESTDIR}/
+  dependencies:
+    - maven-build
+  only:
+    - tags
