--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>DMX Mobile</name>
     <groupId>systems.dmx</groupId>
     <artifactId>dmx-mobile</artifactId>
-    <version>5.0-beta-1-SNAPSHOT</version>
+    <version>5.0-beta-1</version>
     <packaging>bundle</packaging>
 
     <parent>
